<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewsCafe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_share">Share</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">News Notifications</string>

    <string name="pref_last_notification">last_notification</string>


    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_often_update_title">How often to update news</string>
    <string name="pref_often_update_key">updateNewsKey</string>
    <string name="pref_often_update_default">1 Day</string>

    <string name="pref_keep_memory_title">How much time to keep articles</string>
    <string name="pref_keep_memory_key">howOftenKeepArticlesKey</string>
    <string name="pref_keep_memory_default">1 Week</string>
    <string name="see_categories">Categories</string>
    <string name="content_authority">com.gliga.newscafe</string>
    <string name="sync_account_type">newscafe.example.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="reset_factory_settings">Press to reset to factory settings</string>
    <string name="search_item">Search</string>


    <string name="search_for_articles">Search for articles:</string>
    <string name="no_news_selected">No news selected</string>
    <string name="your_search">Your search:</string>
    <string name="click_go_back">( Click to go back )</string>
    <string name="are_you_sure">Are you sure you want to reset to factory settings?</string>

    <string name="title_activity_detail"></string>
    <string name="title_activity_debug">DebugActivity</string>

</resources>
