<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gliga.newscafe.ui.ArticleActivity">


    <item
        android:id="@+id/search_item"
        android:orderInCategory="100"
        android:title="@string/search_item"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/see_categories_item"
        android:orderInCategory="100"
        android:title="@string/see_categories"
        app:showAsAction="never" />


    <!--<item-->
        <!--android:id="@+id/debug_activity_item"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="Debug Activity"-->
        <!--app:showAsAction="never" />-->









</menu>
